--- a/index.css
+++ b/index.css
@@ -8,6 +8,56 @@ body {
 
 body {
   color: #34495e;
+  padding: 0;
+}
+
+svg {
+  fill: currentColor;
+}
+
+#clock {
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.container > span {
+  margin-left: 10px;
+  font-size: 16px;
+}
+
+.container > div {
+  display: flex;
+  overflow-wrap: anywhere;
+  padding-left: 10px;
+}
+
+.del-btn {
+  color: red;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin: 0;
+}
+
+.todo-input {
+  font-size: 16px;
+  font-weight: 600;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .clicked {
@@ -21,4 +71,14 @@ body {
 
 .showing {
   display: block;
+}
+
+.js-clock {
+  display: flex;
+  justify-content: center;
+}
+
+.js-greetings {
+  justify-content: center;
+  display: flex;
 }
